--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 body.dark-mode {
   background-color: #212121;
   color: #f5f5f5;
-  background-image: url(../images/fundo-noite.png);
+  background-image: url(./images/fundo-noite.png);
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
